# ai-course-advisor

./: README.md  pyproject.toml
chroma_db/: chroma.sqlite3
data/catalog/: academic_policies.txt  cs_courses.txt  degree_requirements.txt
output/: final_plan.md
src/course_planning_assistant/: crew.py  ingest.py  main.py
src/course_planning_assistant/config/: agents.yaml  tasks.yaml
