[project]
name = "course_planning_assistant"
version = "0.1.0"
description = "course-planning-assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[litellm,tools]==1.12.2",
]

[project.scripts]
course_planning_assistant = "course_planning_assistant.main:run"
run_crew = "course_planning_assistant.main:run"
train = "course_planning_assistant.main:train"
replay = "course_planning_assistant.main:replay"
test = "course_planning_assistant.main:test"
run_with_trigger = "course_planning_assistant.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
